Added credentials API calls, etc
