# swagger/management_layer.yml
@@ -203,6 +203,13 @@ parameters:
     type: string
     format: uuid
 
+  credentials_id:
+    description: A unique integer value identifying the credentials.
+    in: path
+    name: credentials_id
+    required: true
+    type: integer
+
   optional_deleter_id_filter:
     description: An optional query parameter to filter by deleter_id
     in: query
@@ -1077,6 +1084,83 @@ definitions:
       - invitation_id
       - site_id
       - role_id
+
+  credentials:
+    description: 'An object containing account credentials'
+    type: object
+    properties:
+      id:
+        type: integer
+      site_id:
+        type: integer
+        x-related-info:
+          label: name
+      account_id:
+        type: string
+        minLength: 32
+        maxLength: 256
+      account_secret:
+        type: string
+        minLength: 32
+        maxLength: 256
+      description:
+        type: string
+      created_at:
+        type: string
+        format: 'date-time'
+      updated_at:
+        type: string
+        format: 'date-time'
+    required:
+      - id
+      - site_id
+      - account_id
+      - account_secret
+      - description
+      - created_at
+      - updated_at
+
+  credentials_create:
+    type: object
+    properties:
+      site_id:
+        type: integer
+        x-related-info:
+          label: name
+      account_id:
+        type: string
+        minLength: 32
+        maxLength: 256
+      account_secret:
+        type: string
+        minLength: 32
+        maxLength: 256
+      description:
+        type: string
+    required:
+    - site_id
+    - account_id
+    - account_secret
+    - description
+
+  credentials_update:
+    type: object
+    properties:
+      site_id:
+        type: integer
+        x-related-info:
+          label: name
+      account_id:
+        type: string
+        minLength: 32
+        maxLength: 256
+      account_secret:
+        type: string
+        minLength: 32
+        maxLength: 256
+      description:
+        type: string
+    minProperties: 1
 
   site_role_labels_aggregated:
     description: 'An object containing a site ID and an aggregated list of all the role labels supported
@@ -3624,6 +3708,110 @@ paths:
             $ref: '#/definitions/user_site_role'
       tags:
         - access_control
+
+  /credentials:
+    parameters:
+      - $ref: '#/parameters/optional_portal_context_header'
+    get:
+      operationId: credentials_list
+      x-aor-permissions:
+        - 'urn:ge:access_control:credentials:read'
+      parameters:
+      - $ref: '#/parameters/optional_offset'
+      - $ref: '#/parameters/optional_limit'
+      - name: credentials_ids
+        description: An optional list of credentials ids
+        in: query
+        type: array
+        items:
+          type: integer
+        required: false
+        minItems: 0
+        collectionFormat: multi
+        uniqueItems: true
+      - $ref: '#/parameters/optional_site_filter'
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: ''
+          headers:
+            X-Total-Count:
+              type: integer
+              description: The total number of results matching the query
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/credentials'
+      tags:
+      - access_control
+    post:
+      consumes:
+      - application/json
+      operationId: credentials_create
+      x-aor-permissions:
+        - 'urn:ge:access_control:credentials:create'
+      parameters:
+      - in: body
+        name: data
+        schema:
+          $ref: '#/definitions/credentials_create'
+      produces:
+      - application/json
+      responses:
+        '201':
+          description: ''
+          schema:
+            $ref: '#/definitions/credentials'
+      tags:
+      - access_control
+
+  '/credentials/{credentials_id}':
+    parameters:
+    - $ref: '#/parameters/optional_portal_context_header'
+    - $ref: '#/parameters/credentials_id'
+    delete:
+      operationId: credentials_delete
+      x-aor-permissions:
+        - 'urn:ge:access_control:credentials:delete'
+      responses:
+        '204':
+          description: ''
+      tags:
+      - access_control
+    get:
+      operationId: credentials_read
+      x-aor-permissions:
+        - 'urn:ge:access_control:credentials:read'
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: ''
+          schema:
+            $ref: '#/definitions/credentials'
+      tags:
+      - access_control
+    put:
+      consumes:
+      - application/json
+      operationId: credentials_update
+      x-aor-permissions:
+        - 'urn:ge:access_control:credentials:update'
+      parameters:
+      - in: body
+        name: data
+        schema:
+          $ref: '#/definitions/credentials_update'
+      produces:
+      - application/json
+      responses:
+        '200':
+          description: ''
+          schema:
+            $ref: '#/definitions/credentials'
+      tags:
+      - access_control
 
   /usersitedata:
     parameters:
